...
      }
    },
    "Add an item": {
      "localizations": {
        "es": {
...
      }
    },
    "Appearance": {
      "localizations": {
        "es": {
...
      }
    },
    "Before you burn": {
      "localizations": {
        "es": {
...
      }
    },
    "Burn all data": {
      "localizations": {
        "es": {
...
      }
    },
    "Burn all data and delete my account": {
      "localizations": {
        "es": {
...
      }
    },
    "Cancel": {
      "localizations": {
        "es": {
...
      }
    },
    "Checklists": {
      "localizations": {
        "es": {
...
      }
    },
    "Colours": {
      "localizations": {
        "es": {
...
      }
    },
    "Continue as guest": {
      "localizations": {
        "es": {
...
      }
    },
    "Export": {
      "localizations": {
        "es": {
...
      }
    },
    "Export data": {
      "localizations": {
        "es": {
...
      }
    },
    "Household manual": {
      "localizations": {
        "es": {
...
      }
    },
    "Household name": {
      "localizations": {
        "es": {
...
      }
    },
    "Lavender": {
      "localizations": {
        "es": {
...
      }
    },
    "Members & invites": {
      "localizations": {
        "es": {
...
      }
    },
    "My Household": {
      "localizations": {
        "es": {
...
      }
    },
    "New checklist": {
      "localizations": {
        "es": {
...
      }
    },
    "New entry": {
      "localizations": {
        "es": {
...
      }
    },
    "New task": {
      "localizations": {
        "es": {
...
      }
    },
    "No checklists yet": {
      "localizations": {
        "es": {
...
      }
    },
    "OK": {
      "shouldTranslate": false
    },
...
      }
    },
    "Pacelli": {
      "shouldTranslate": false
    },
...
      }
    },
    "Save": {
      "localizations": {
        "es": {
...
      }
    },
    "Search": {
      "localizations": {
        "es": {
...
      }
    },
    "Search everything": {
      "localizations": {
        "es": {
...
      }
    },
    "Send feedback": {
      "localizations": {
        "es": {
...
      }
    },
    "Settings": {
      "localizations": {
        "es": {
...
      }
    },
    "Tasks": {
      "localizations": {
        "es": {
...
      }
    },
    "Tell us more…": {
      "localizations": {
        "es": {
...
      }
    },
    "Thank you!": {
      "localizations": {
        "es": {
...
      }
    },
    "Title": {
      "localizations": {
        "es": {
...
      }
    },
    "Write it down…": {
      "localizations": {
        "es": {
...
